fix: make last question visible

--- a/src/pages/form/formWizard.css
+++ b/src/pages/form/formWizard.css
@@ -85,6 +85,10 @@
     padding-left: 32px;
     padding-right: 32px;
   }
+
+  .forms-margin:last-child {
+    margin-bottom: 80px;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
